fixed alignment, 50% marker

--- a/default.css
+++ b/default.css
@@ -10,6 +10,7 @@ body {
     height: 100%;
     max-width: 100%;
     margin: 0;
+    font-family: 'Inter', sans-serif;
 }
 ul{
     padding: 0;
