--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,24 @@
 
 .topsection{display: flex;}
+.background-top{display: flex;}
 
-
+.vector1{
+  width: 55.28125rem;
+  height: 32.3125rem;
+  flex-shrink: 0;
+  z-index: -1;
+  position:absolute;
+  right: 9rem;
+  }
+  .vector2{
+    fill: #E1E7EF;
+    width: 19.75rem;
+    height: 27.6875rem;
+    flex-shrink: 0;
+    z-index: -2;
+    position: absolute;
+    right: 0;
+  }
 
 
 .navbar{
@@ -65,15 +82,17 @@
     }
 .topsection{ width: 100%}
 
+.header-section {display: flex;}
+
+.hero-content{padding: 0 2rem 6rem 2rem;}
 .hero-section{
     display: flex;
     width: 100%;
     align-items: flex-start;
-    gap: 0.625rem;
+    gap: 10.625rem;
     place-content: center;
     align-items: center;
     background-color: #f7f7f7;
-    padding-bottom: 5rem;
 }
 
 .left-btns{
@@ -94,11 +113,11 @@
 }
 .left-part{
     display: flex;
-    padding-bottom: 3.75rem;
+    padding: 0 0 1rem 3.75rem;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    flex: 1 0 0;
+    flex: 1;
     align-self: stretch;
 }
 
@@ -114,13 +133,14 @@
 .right-part{
     display:flex;
     height: 28rem;
-    flex: 1 0 0;
+    flex: 1;
+    place-content: space-evenly;
+    padding-top: 4rem;
 }
 
 .right-part img {
    display: flex;
-  width: 3rem;
-  height: 3rem;
+  height: 5rem;
   padding: 1rem;
   border-radius: 2.5rem;
   align-items: flex-start;
@@ -135,8 +155,7 @@
     position: relative;
     top:1.25rem;
     left: 4.5rem;
-    width: 1.5rem;
-    height: 1.5rem;
+    height: 3.5rem;
 }
 .right-part img:nth-child(2){
     position: relative;
@@ -162,8 +181,7 @@
     position: relative;
     right: 15rem;
     top: 18rem;
-    width: 1.5rem;
-    height: 1.5rem;
+    height: 3.5rem;
 }
 .right-part img:nth-child(7){
     position: relative;
@@ -189,7 +207,7 @@
   .benefits-list {
     display: flex;
     align-self: center;
-    gap: 1.25rem;
+    gap: 1.75rem;
   }
 
   .benefits p {
@@ -221,10 +239,18 @@
     width: 3.25rem;
     height: 3.25rem
   }
+
+.card3 h2 button {
+border: 1px transparent;
+border-radius: 1rem;
+background-color: rgba(1, 201, 167, 1);
+color: white;
+padding: 0.25rem 0.63rem;
+}
+
   .banner-section{
     display: flex;
     justify-content: space-between;
-    background-color:rgba(248, 250, 254, 1);
     margin: 0 0 5rem 1.8rem;   
     gap: 0.63rem;
 }
@@ -243,8 +269,11 @@
 
 .right-banner img { 
     width: 42.5rem;
-    margin-top: 9rem
+    margin-top: 9rem;
+    margin-bottom: -0.25rem;
 }
+
+
 .why{
     display: flex;
     width: 75%;
@@ -283,9 +312,7 @@
 .line{
     background-color: #d1dde8;
     height: 0.23rem;
-    width: 8rem;
-    border-top: 0.33rem;
-    
+    width: 8rem;   
 }
 
 .white{
@@ -294,14 +321,14 @@
 }
 .bull-circle{
     position: relative;
-    background-color: #d1dde8;
-    height: 2.6875rem ;
+    background-color: rgba(236, 242, 255, 1);
+    height: 4rem;
     border-radius: 2.563rem;
-    min-width: 3.12rem;
+    min-width: 4rem;
     color: #2476FF;
     text-align: center;
     font-size: 2rem;
-    padding-top: 0.5rem;
+    padding-top: 0.95rem;
     margin-left: 0.15rem;
     margin-right: 0.15rem;
 }
@@ -330,6 +357,8 @@
 
 .hubspot{
     display: flex;
+    padding-left: 2rem;
+    padding-bottom: 5rem;
 }
 .person{
     flex: 1;
@@ -340,16 +369,17 @@
     position: relative;
     width: 14.5rem;
     height: 23rem;
-    bottom: -4rem;
-    left: 1.7rem;
+    bottom: -10rem;
+    left: 3.7rem;
 }
 .person img:nth-child(2){
     position: relative;
-    width: 23rem;
-    height: 26.5rem;
-    left: -9rem;
-    bottom: 2rem;
+    width: 25rem;
+    height: 29.5rem;
+    left: -7rem;
+    bottom: 0;
 }
+.person-quote {padding-right: 1.8rem;}
 
 .hub-icon{
     margin-bottom: 2rem;
@@ -358,8 +388,8 @@
 }
 
 .hub-quote {
-    font-size: 2rem;
-    line-height: 2rem;
+    font-size: 1.9rem;
+    line-height: 2.5rem;
     margin-bottom: 3rem;
 }
 .signiture {
@@ -374,7 +404,7 @@ margin: 0;
 .brand-bar{display: grid;}
 .brand-bar h3{
     text-align: center;
-    color: #666;
+    color: #5F6368;
     font-size: 1.5rem;
     margin-bottom: 3rem;
 }
